user.user_addr_main value 수정

--- a/springProject/src/main/resources/templates/user/detail.html
+++ b/springProject/src/main/resources/templates/user/detail.html
@@ -122,7 +122,7 @@
 								</div>
 							</div>
 							<div>
-								<input name="user_adress" id="sample4_roadAddress" th:value="${user.user_adress}" class="form-control" placeholder="도로명주소" readonly>
+								<input name="user_adress" id="sample4_roadAddress" th:value="${user.user_addr_main}" class="form-control" placeholder="도로명주소" readonly>
 							</div>
 							<div>
 								<input id="sample4_extraAddress" class="form-control" placeholder="참고항목" readonly>
