--- a/springProject/src/main/resources/templates/footer.html
+++ b/springProject/src/main/resources/templates/footer.html
@@ -8,7 +8,7 @@
 <body>
     <div id="footer">
 	  <footer>
-	    <ul class="nav justify-content-around border-bottom" id="footerTop">
+	    <ul class="nav justify-content-around" id="footerTop">
 	      <li class="nav-item"><a href="#" class="nav-link px-2">회사 소개</a></li>
 	      <li class="nav-item"><a href="#" class="nav-link px-2">이용 약관</a></li>
 	      <li class="nav-item"><a href="#" class="nav-link px-2">개인정보 처리방침</a></li>
