--- a/springProject/src/main/resources/templates/header.html
+++ b/springProject/src/main/resources/templates/header.html
@@ -18,7 +18,7 @@
         <div id="headerCenter">
         	<div class="container-fluid" id="searchBox">
 			  <form class="d-flex" role="search" action="#" id="searchForm" name="searchForm" method="get">
-			    <input class="form-control me-2" name="searchInput" id="searchInput" type="search" aria-label="Search" value minlength="2" maxlength="50">
+			    <input class="form-control me-2" name="searchInput" id="searchInput" type="search" aria-label="Search" minlength="2" maxlength="50">
 			    <button class="btn" type="submit">
 			    	<img alt="" src="/public/img/pngegg.png">
 			    </button>
@@ -28,8 +28,6 @@
         <div id="headerRight">
 	        <nav style="--bs-breadcrumb-divider: '|';" aria-label="breadcrumb">
 			  <ol class="breadcrumb">
-			    <li class="breadcrumb-item"><a href="#">로그인</a></li>
-			    <li class="breadcrumb-item"><a href="/user/signup">회원가입</a></li>
 			  	<th:block th:if="${session.loginUser==null}">
 			    	<li class="breadcrumb-item"><a href="/user/login.do">로그인</a></li>
 			    	<li class="breadcrumb-item"><a href="/user/signup">회원가입</a></li>
