--- a/springProject/src/main/resources/templates/question/faqList.html
+++ b/springProject/src/main/resources/templates/question/faqList.html
@@ -102,23 +102,22 @@
     <th:block th:unless="${faq_division_no == 0}">
     	<div class="d-flex justify-content-center" th:insert="/pagination/pageFaqCategory"></div>
     </th:block>
-    <div id="searchArea">
-    <form action="#" method="get" enctype="multipart/form-data" name="faqSerach">
-            <select name="searchDate" id="searchDate" class="form-select form-select-sm">
-                <option value="week">일주일</option>
-                <option value="month">1개월</option>
-                <option value="month6">6개월</option>
-                <option value="all">전체</option>
-            </select>
-            <select name="searchKey" id="searchKey" class="form-select form-select-sm">
-                <option value="subject">제목</option>
-                <option value="content">내용</option>
-                <option value="memberId">작성자 아이디</option>
-            </select>
-            <input type="search" name="search" id="search" class="form-control">
-            <a href="#" class="btn btn-secondary">찾기</a>
-        </form>
-    </div>
+    <nav class="navbar mt-5 mb-4" style="min-width: 1200px;">
+	  <div class="container-fluid">
+	    <form th:action="@{./0}" class="d-flex" role="search">
+	      <select class="form-select me-2" name="field" id="searchKey" style="width: 100px; border: 1px solid #6c757d">
+               <option th:selected="${#strings.equals(param.field, 'faqboard_no')}" value="faqboard_no">글 번호</option>
+	      	   <option th:selected="${#strings.equals(param.field, 'faqboard_title')}" value="faqboard_title">제목</option>
+	      </select>
+	      <input class="form-control me-2" name="search" id="search" size="20" type="search" placeholder="검색" aria-label="Search" style="border: 1px solid #6c757d">
+	      <button class="btn btn-outline-secondary">
+			<img alt="" src="/public/img/pngegg.png" style="width: 28px; height: 28px;">
+		  </button>
+	      <input type="hidden" name="sort" th:value="${param.sort}">
+	      <input type="hidden" name="direct" th:value="${param.direct}">
+	    </form>
+	  </div>
+	</nav>
     </main>
     <footer th:insert="/footer"></footer>
 </body>
