--- a/springProject/src/main/resources/templates/user/signup.html
+++ b/springProject/src/main/resources/templates/user/signup.html
@@ -22,9 +22,9 @@
             <div id="signupBox">
                 <div id="signupLogo">회원가입</div>
                  <form action="/user/signup.do" name="signupForm" id="signupForm" method="post" class="needs-validation" novalidate>
-                    <div class="row g-3 align-items-center">
+                    <div class="row g-3 align-items-center has-validation">
 					  <div class="col-auto signupInputBox">
-					    <input type="text" name="user_name" class="form-control signupInput" placeholder="이름 : 2 ~ 20자의 영문 또는 한글" maxlength="20">
+					    <input type="text" name="user_name" class="form-control signupInput" placeholder="이름(필수) : 2 ~ 20자의 영문 또는 한글" maxlength="20">
 					  </div>
 					  <div class="col-auto mt-0">
 					     <span id="nameHelp" class="form-text"></span>
@@ -32,11 +32,11 @@
 						   사용 가능한 이름입니다.
 						 </span>
 						 <span id="nameHelpInvalid" class="invalid-feedback"></span> 
-						</div>
+					  </div>
 					</div>
 					<div class="row g-3 align-items-center">
 					  <div class="col-auto signupInputBox">
-					    <input type="text" name="user_id" class="form-control signupInput" placeholder="ID : 6 ~ 20자의 영문 또는 숫자의 조합" maxlength="20">
+					    <input type="text" name="user_id" class="form-control signupInput" placeholder="ID(필수) : 6 ~ 20자의 영문 또는 영문 + 숫자" maxlength="20">
 					  </div>
 					  <div class="col-auto mt-0">
 					     <span id="idHelp" class="form-text"></span>
@@ -48,7 +48,7 @@
 					</div>
 					<div class="row g-3 align-items-center">
 					  <div class="col-auto signupInputBox">
-					    <input type="password" name="user_pw" class="form-control signupInput" placeholder="비밀번호 : 8 ~ 16자의 영문 대소문자, 숫자, 특수 문자를 조합" maxlength="16">
+					    <input type="password" name="user_pw" class="form-control signupInput" placeholder="비밀번호(필수) : 8 ~ 16자의 대문자 + 소문자 + 숫자 + 특수 문자" maxlength="16">
 					  </div>
 					  <div class="col-auto mt-0">
 					     <span id="pwHelp" class="form-text"></span>
@@ -58,7 +58,7 @@
 					</div>
 					<div class="row g-3 align-items-center">
 					  <div class="col-auto signupInputBox">
-					    <input type="password" name="pwCheck" class="form-control signupInput" placeholder="비밀번호 확인" maxlength="16">
+					    <input type="password" name="pwCheck" class="form-control signupInput" placeholder="비밀번호 확인(필수) : 비밀번호를 형식에 맞게 입력한 후에 입력" maxlength="16">
 					  </div>
 					  <div class="col-auto mt-0">
 					     <span id="pwCheckHelp" class="form-text"></span>
@@ -70,19 +70,19 @@
 					</div>
 					<div class="row g-3 align-items-center">
 					  <div class="col-auto signupInputBox">
-					    <input type="email" name="user_email" class="form-control signupInput" placeholder="이메일 : id@domain (Kevin@example.com) 형식">
-					  </div>
-					  <div class="col-auto mt-0">
+					    <input type="email" name="user_email" class="form-control signupInput" placeholder="이메일(필수) : 예시) Kevin@example.com">					  
+				     </div>
+					 <div class="col-auto mt-0">
 					     <span id="emailHelp" class="form-text"></span>
 						 <span class="valid-feedback">
 						   사용 가능한 이메일입니다.
 						 </span>
 						 <span id="emailHelpInvalid" class="invalid-feedback"></span> 
-						</div>
+					 </div>
 					</div>
 					<div class="row g-3 align-items-center">
 					  <div class="col-auto signupInputBox">
-					    <input type="tel" name="user_phone" class="form-control signupInput" oninput="phoneAutoComplete(this)" placeholder="휴대폰 : ###-####-#### 형식" maxlength="13">
+					    <input type="tel" name="user_phone" class="form-control signupInput" oninput="phoneAutoComplete(this)" placeholder="휴대폰(필수) : 예시) 010-1234-1234" maxlength="13">
 					  </div>
 					  <div class="col-auto mt-0">
 					     <span id="phoneHelp" class="form-text"></span>
@@ -94,7 +94,7 @@
 					</div> 
 					<div class="row g-3 align-items-center">
 					    <div class="col-auto signupInputBox" style="width: 335px;">
-						   <input type="text" class="form-control signupInput" id="sample6_postcode" placeholder="우편번호" readonly>
+						   <input type="text" class="form-control signupInput" name="user_addr_postcode" id="sample6_postcode" placeholder="우편번호(필수)" readonly>
 						</div>
 					    <div class="col-auto mt-0 p-0">
 						   <input class="btn btn-secondary" type="button" onclick="sample6_execDaumPostcode()" value="우편번호 찾기" style="height: 50px;">
@@ -102,21 +102,20 @@
 					</div> 
 					<div class="row g-3 align-items-center">
 				      <div class="col-auto signupInputBox">
-					    <input class="form-control signupInput" type="text" id="sample6_address" placeholder="주소" readonly>
+					    <input class="form-control signupInput" type="text" name="user_addr_main" id="sample6_address" placeholder="주소(필수)" readonly>
 					  </div>
 					</div> 
 					<div class="row g-3 align-items-center">
 					    <div class="col-auto signupInputBox">
-						   <input class="form-control signupInput" type="text" name="user_detail_adress" id="sample6_detailAddress" placeholder="상세 주소">
+						   <input class="form-control signupInput" type="text" name="user_addr_detail" id="sample6_detailAddress" placeholder="상세 주소(필수) : 우편번호를 찾은 후에 입력">
 						</div>
 					</div> 
 					<div class="row g-3 align-items-center">
 						<div class="col-auto signupInputBox">
-						   <input class="form-control signupInput" type="text" id="sample6_extraAddress" placeholder="참고 항목" readonly>
+						   <input class="form-control signupInput" type="text" name="user_addr_extra" id="sample6_extraAddress" placeholder="참고 항목(선택)" readonly>
 						</div>
 					</div>
 				    <button class="btn btn-primary">가입하기</button>
-				    <input type="hidden" name="user_adress" id="user_adress">
 				</form>
             </div>
         </div>
