--- a/springProject/src/main/resources/templates/review/reviewModify.html
+++ b/springProject/src/main/resources/templates/review/reviewModify.html
@@ -31,6 +31,7 @@ margin: 25px;
 } 
 </style>
 <body>
+	<main class="container "style="min-width : 1200px;">
 	<div id="pageBody">
 	
 		<h1>작성한 리뷰 관리(수정페이지)</h1>
@@ -57,5 +58,6 @@ margin: 25px;
 		</div>
 	
 	</div>
+	</main>
 </body>
 </html>
