--- a/springProject/src/main/resources/templates/order/orderPage.html
+++ b/springProject/src/main/resources/templates/order/orderPage.html
@@ -9,17 +9,17 @@
 <script th:src="@{/public/js/orderPage.js}" defer="defer"></script>
 <body>
 	<header th:insert="/header"></header>
-	<main class="container mb-5">
+	<main class="container mb-5" style="min-width : 1200px;">
 	<h1 class="text-center my-5">결제 페이지</h1>
-	<!-- <p th:text="${ordersheet.user.user_id}"></p> -->
-		<div class="d-flex justify-content-evenly">
+	<p th:text="${prodName}"></p>
+		<div class="d-flex justify-content-evenly" style="min-width : 1200px;">
 		
 		<div class="d-flex flex-column w-50">
 		<h2>주문 정보</h2>
 		<p class="text-left mx-3">*표는 필수표시 항목입니다.</p>
 		<hr>
-			<form class="row row-cols-lg-auto g-3 align-items-center mb-3">
-				  <div class="col-12">
+			<form class="row g-3 align-items-center mb-3">
+				  <div class="col-5">
 				    <label class="visually-hidden" for="inlineFormInputGroupUsername">주문자</label>
 				    <div class="input-group">
 				      <div class="input-group-text">주문자 *</div>
@@ -27,8 +27,8 @@
 				    </div>
 				  </div>
 			  </form>
-			<form class="row row-cols-lg-auto g-3 align-items-center mb-3">
-				  <div class="col-12">
+			<form class="row row-col g-3 align-items-center mb-3">
+				  <div class="col-8">
 				    <label class="visually-hidden" for="inlineFormInputGroupUserEmail">이메일</label>
 				    <div class="input-group">
 				      <div class="input-group-text">이메일 *</div>
@@ -37,10 +37,10 @@
 				    </div>
 				  </div>
 				
-				  <div class="col-12">
+				  <div class="col-3">
 				    <label class="visually-hidden" for="inlineFormSelectPref">Preference</label>
 				    <select class="form-select" id="inlineFormSelectPref" disabled>
-				      <option selected >@직접입력</option>
+				      <option value="" selected>@직접입력</option>
 				      <option value="1">@gmail.com</option>
 				      <option value="2">@naver.com</option>
 				      <option value="3">@daum.net</option>
@@ -108,8 +108,8 @@
 				  </label>
 				</div>
 			</div>
-			<form class="row row-cols-lg-auto g-3 align-items-center mb-3" name="nameForm">
-				  <div class="col-12">
+			<form class="row g-3 align-items-center mb-3" name="nameForm">
+				  <div class="col-5">
 				    <label class="visually-hidden" for="inlineFormInputGroupUsername">주문자</label>
 				    <div class="input-group">
 				      <div class="input-group-text">주문자 *</div>
@@ -117,61 +117,63 @@
 				    </div>
 				  </div>
 			  </form>
-			<form class="row row-cols-lg-auto g-3 align-items-center mb-3">
-				  <div class="col-12">
+			<form class="row row-cols-lg g-3 align-items-center mb-3" name="emailForm">
+				  <div class="col-8">
 				    <label class="visually-hidden" for="inlineFormInputGroupUserEmail">이메일</label>
 				    <div class="input-group">
 				      <div class="input-group-text">이메일 *</div>
-				      <input type="text" class="form-control" id="inputUserEmailId">
-				      <input type="text" class="form-control" id="inputUserEmailAdr">
+				      <input type="text" class="form-control" id="inputUserEmailId" name="emailId">
+				      <input type="text" class="form-control" id="inputUserEmailAdr" name="emailAdr" placeholder="@example.com">
 				    </div>
 				  </div>
 				
-				  <div class="col-12">
-				    <label class="visually-hidden" for="inlineFormSelectPref">Preference</label>
-				    <select class="form-select" id="inlineFormSelectPref">
-				      <option selected>@직접입력</option>
-				      <option value="1">@gmail.com</option>
-				      <option value="2">@naver.com</option>
-				      <option value="3">@daum.net</option>
+				  <div class="col-3">
+				    <label class="visually-hidden" for="emailAdrSelect">Preference</label>
+				    <select class="form-select" id="emailAdrSelect"> <!-- onchange="showVal(this)" -->
+				      <option value="" selected >@직접입력</option>
+				      <option value="@gmail.com">@gmail.com</option>
+				      <option value="@naver.com">@naver.com</option>
+				      <option value="@daum.net">@daum.net</option>
 				    </select>
 				  </div>
 			  </form>
-				<form class="row row-cols-lg-auto g-3 align-items-center mb-3 d-flex flex-direction-row justify-content-left">
+				<form class="row row-cols g-3 align-items-center mb-3 d-flex flex-direction-row justify-content-left"
+					 name="phoneForm">
 					<div class="input-group">
 						<span class="input-group-text" id="inputGroup-sizing-default">전화번호 *</span>
-						<button class="btn btn-outline-secondary dropdown-toggle" type="button"
-							data-bs-toggle="dropdown" aria-expanded="false">010</button>
-						  <ul class="dropdown-menu dropdown-menu-end">
-						    <li><a class="dropdown-item">010</a></li>
-						    <li><a class="dropdown-item">02</a></li>
-						    <li><a class="dropdown-item">031</a></li>
-						    <li><a class="dropdown-item">032</a></li>
-						  </ul>
+						<label class="visually-hidden" for="phoneNo">Preference</label>
+						    <select class="form-select col-3 rounded" onchange="showValue(this)">
+						      <option value="010" selected>010</option>
+						      <option value="02">02</option>
+						      <option value="031">031</option>
+						      <option value="032">032</option>
+						      <option value="070">070</option>
+						    </select>
+						
 						  <div class="d-flex ">
-					  <input type="text" class="form-control" aria-label="Username" id="inputPhoneMid">
-					  <input type="text" class="form-control"aria-label="Server" id="inputPhoneLast">
+					  <input type="text" class="form-control" id="inputPhoneMid" name="phoneNoMid">
+					  <input type="text" class="form-control" id="inputPhoneLast" name="phoneNoLast">
 						  </div>
 					</div>
 			  </form>
-			<form class="row g-3">
+			<form class="row g-3" name="addrForm">
 			  <div class="col-auto">
 			    <label for="staticEmail2" class="visually-hidden">주소 *</label>
 			    <input type="text" readonly class="form-control-plaintext" id="staticEmail2" value="주소 *">
 			  </div>
 			  <div class="col-auto">
 			    <label for="inputPassword2" class="visually-hidden">우편번호</label>
-			    <input type="text" class="form-control" id="sample6_postcode" placeholder="우편번호">
+			    <input type="text" class="form-control" name="addr_postcode" id="sample6_postcode" placeholder="우편번호(필수)"readonly>
 			  </div>
 			  <div class="col-auto">
 				<input class="btn btn-outline-dark"type="button" onclick="sample6_execDaumPostcode()" value="우편번호 찾기" ><br>
 			  </div>
-			</form>
 			<div class="d-flex col-4 my-1">
-			<input class="form-control col-1" type="text" id="sample6_address" placeholder="주소">
-			<input class="form-control col-1" type="text" id="sample6_detailAddress" placeholder="(층,동,호수 반드시 기입)">
-			<input class="form-control col-1" type="text" id="sample6_extraAddress" placeholder="참고항목">
+			<input class="form-control col-1" type="text" name="addr_main" id="sample6_address" placeholder="상세주소" readonly>
+			<input class="form-control col-1" type="text" name="addr_detail" id="sample6_detailAddress" placeholder="(층,동,호수 반드시 기입)">
+			<input class="form-control col-1" type="text" name="addr_extra" id="sample6_extraAddress" placeholder="참고항목" readonly>
 			</div>
+			</form>
 		</div>	
 		
 		<div class="d-flex flex-column w-25 m-50">
