--- a/springProject/src/main/resources/templates/product/productDetail.html
+++ b/springProject/src/main/resources/templates/product/productDetail.html
@@ -7,12 +7,12 @@
 
 <body>
 	<header th:insert="/header"></header>
-	<main class="container">
-	<div class="container">
+	<main class="container" style="min-width : 1200px;">
+	<div class="container" style="min-width : 1200px;">
 		<h1 class="text-center mt-5 p-3" th:text="${product.prod_name}"></h1>
 		<br>
 			<div class="d-flex justify-content-evenly">
-				<img src="/public/img/15536087_2.jpg" class="col-md-4 p-2 rounded img-thumbnail" alt="이미지부분">
+				<img src="/public/img/15536087_2.jpg" class="col-md-4 w-25 h-25 p-2 rounded img-thumbnail" style="width:auto;" alt="이미지부분">
 				<div class="w-25">
 				<p>판매가 <strong th:text="${#numbers.formatInteger(product.prod_price, 3, 'COMMA')+'원'}"></strong></p>
 				<hr>
@@ -24,12 +24,13 @@
 				<hr>
 				<p>배송비</p>
 				<hr>
-					<div id="payDetail">
+					<div style="min-width : 1200px;">
 					<p>총 합계 금액 <strong th:text="${#numbers.formatInteger(product.prod_price, 3, 'COMMA')+'원'}"></strong></p>
-						<div class="btn-group w-100 container-fluid" role="group" aria-label="Default button group">
-						  <button type="button" class="btn btn-outline-dark col-6" style="border-radius: 0;">좋아요</button>
-						  <button type="button" class="btn btn-outline-dark col-8" style="border-radius: 0;">장바구니</button>
-						  <button type="button" class="btn btn-outline-dark col-10" style="border-radius: 0;">구매하기</button>
+						<div class="" role="group" aria-label="Default button group">
+						  <button type="button" class="btn btn-outline-dark" style="border-radius: 0;">좋아요</button>
+						  <button type="button" class="btn btn-outline-dark" style="border-radius: 0;">장바구니</button>
+						  <button type="submit" class="btn btn-outline-dark" style="border-radius: 0;"
+						  		onclick="location.href='/order/orderPage/user001'">구매하기</button>
 						</div>
 					</div>
 				</div>
