--- a/springProject/src/main/resources/templates/question/qnaDetail.html
+++ b/springProject/src/main/resources/templates/question/qnaDetail.html
@@ -7,7 +7,7 @@
 
 <body>
 	<header th:insert="/header"></header>
-	<main class="container">
+	<main class="container" style="min-width : 1200px;">
 	<h1 class="text-center m-5">Q&A</h1>
 	<div class="m-5 w-75 mx-auto">
 	<table class="table mx-auto">
