--- a/springProject/src/main/resources/templates/review/reviewList.html
+++ b/springProject/src/main/resources/templates/review/reviewList.html
@@ -23,32 +23,31 @@ margin-right: 20px;
 </style>
 <body>
 	<header th:insert="/header"></header>
-	<div id="pageBody">
-	
-		<h1>작성한 리뷰 관리(목록)</h1>
-		<div id="statusText">
-			<p> <strong></strong>님, 총 <strong></strong>개의 리뷰를 등록하셨습니다.</p>
-		</div>
-		<div id="reviewList">
-		<ol>
-			<li th:each="review : ${reviews}">
-				<span th:text="${review.review_title}"></span>
-				<div>
-					<span>별점<strong th:text="${review.review_score}"></strong> / 5</span>
+	<main class="container my-5 "style="min-width : 1200px;">
+		<h1 class="text-center mt-5">작성한 리뷰 관리(목록)</h1>
+		<p class="text-end" style="margin-right:300px">
+			<span> <strong th:text="${userId}"></strong>님, 총 <strong></strong>개의 리뷰를 등록하셨습니다.</span>
+		</p>
+		<ol class="list-group w-50" style="margin-left:300px">
+			<li class="list-group-item d-flex flex-column justify-content-evenly align-items-start" th:each="review : ${reviews}">
+			    <div class="ms-2 me-auto">
+			      <p class="fw-bold" th:text="${review.review_title}"></p>
+					<span>별점 :
+						<span  class="badge bg-primary rounded-pill" >
+						<strong th:text="${review.review_score}"></strong>
+						<strong> / 5</strong>
+						</span> 
+					</span>
 					<span th:text="${#dates.format(review.review_time, 'yyyy-MM-dd')}"></span>
+					<p class="mt-3" th:text="${review.review_content}"></p>
 				</div>
-				<div>
-				<p th:text="${review.review_content}"></p>
-				</div>
-				<div id="buttons">
-					<button>수정</button>
-					<button>삭제</button>
+				<div class="ms-auto align-items-end">
+					<button class="btn btn-sm btn-outline-primary me-2">수정</button>
+					<button class="btn btn-sm btn-outline-danger">삭제</button>
 				</div>
 			</li>
 		</ol>
-		</div>
-	
-	</div>
+	</main>
 	<footer th:insert="/footer"></footer>
 </body>
 </html>
