--- a/springProject/src/main/resources/templates/question/qnaDetail.html
+++ b/springProject/src/main/resources/templates/question/qnaDetail.html
@@ -45,7 +45,7 @@
 			<tr>
 				<td colspan="2">
 					<strong>답변</strong>
-					<p>
+					<p class="mt-3">
 					안녕하세요, 고객님.<br>
 					현재 배송업체에 문의한 결과 배송 착오로 물건이 잘못 도착한 것으로 확인되었습니다.<br>
 					배송 실수로 인한 불편에 대해 사과의 말씀드립니다.<br>
@@ -67,9 +67,11 @@
 	</table>
 	</div>
 	<div class="d-flex justify-content-end" style="margin:-20px 150px 100px 0;">
-	<button type="button" class="btn btn-outline-primary ms-2">목록</button>
-	<button type="button" class="btn btn-outline-secondary ms-2">수정</button>
-	<button type="button" class="btn btn-outline-danger ms-2">삭제</button>
+		<a class="btn btn-outline-primary" th:href="@{/question/qnaList/1}">목록</a>
+		<div class="ms-1" th:if="${session.loginUser?.user_id==qnaBoard.user.user_id}">
+			<a class="btn btn-outline-secondary" th:href="@{/question/updateQna/{no}(no=${qnaBoard.qnaboard_no})}">수정</a>
+			<a class="btn btn-outline-danger" th:href="@{/question/deleteQna/{no}/{userId}(no=${qnaBoard.qnaboard_no},userId=${qnaBoard.user.user_id})}">삭제</a>
+		</div>
 	</div>
 	</main>
 	<footer th:insert="/footer"></footer>
