--- a/springProject/src/main/resources/templates/question/qnaList.html
+++ b/springProject/src/main/resources/templates/question/qnaList.html
@@ -19,7 +19,6 @@
     	<span>상품 Q&A</span>
 		<a href="/question/insertQna.do" class="small btn btn-secondary">나도 문의하기</a>
     </h2>
-    <h2>상품 Q&A</h2>
     <div id="table">
         <table id="tableList" class="table table-striped table-hover">
             <thead>
@@ -31,12 +30,14 @@
                 </tr>
             </thead>
             <tbody>
-                <tr th:each="qna: ${qnaList}">
-                    <td th:text="${qna.qnaboard_no}"></td>
-                    <td th:text="${qna.qnaboard_title}"></td>
-                    <td th:text="${qna.user_id}"></td>
-                    <td th:text="${#dates.format(qna.post_time, 'yyyy-MM-dd')}"></td>
-                </tr>
+                <th:block th:each="qna: ${qnaList}">
+                	<tr th:onclick="location.href='/question/qnaDetail/[[${qna.qnaboard_no}]]'">
+	                    <td th:text="${qna.qnaboard_no}"></td>
+	                    <td th:text="${qna.qnaboard_title}"></td>
+	                    <td th:text="${qna.user_id}"></td>
+	                    <td th:text="${#dates.format(qna.post_time, 'yyyy-MM-dd')}"></td>
+                	</tr>
+                </th:block>
             </tbody>
         </table>
     </div>
