--- a/springProject/src/main/resources/templates/user/detail.html
+++ b/springProject/src/main/resources/templates/user/detail.html
@@ -60,12 +60,9 @@
 		display: inline-block;
 	}
 	#userAddressInput>div>div>div>input{
-<<<<<<< HEAD
 		width: 100px;
 	}
 	#userAddressInput>div>div>input{
-=======
->>>>>>> 622b62f97a5300333d0d1db9ad415eccda9e0066
 		width: 250px;
 	}
 </style>
@@ -84,11 +81,7 @@
 					<div>
 						<div class="wd100">아이디</div>
 						<div>
-<<<<<<< HEAD
 							<input class="form-control-plaintext" name="user_id" th:value="${user.user_id}" readonly style="padding: 12px">
-=======
-							<input class="form-control" name="user_id" th:value="${user.user_id}" readonly>
->>>>>>> 622b62f97a5300333d0d1db9ad415eccda9e0066
 						</div>
 					</div>
 					<div>
@@ -122,39 +115,24 @@
 						<div>
 							<div>
 								<div>
-<<<<<<< HEAD
-									<input type="text" id="sample4_postcode" class="form-control" placeholder="우편번호" readonly>
+									<input type="text" name="user_addr_postcode" id="sample4_postcode" th:value="${user.user_addr_postcode}" class="form-control" placeholder="우편번호" readonly>
 								</div>
 								<div>
 									<button class="btn btn-secondary btn-sm" type="button" onclick="sample4_execDaumPostcode()">주소검색</button>
 								</div>
 							</div>
 							<div>
-								<input name="user_adress" id="sample4_roadAddress" th:value="${user.user_addr_main}" class="form-control" placeholder="도로명주소" readonly>
+								<input type="text" name="user_addr_main" id="sample4_roadAddress" th:value="${user.user_addr_main}" class="form-control" placeholder="도로명주소" readonly>
 							</div>
 							<div>
-								<input id="sample4_extraAddress" class="form-control" placeholder="참고항목" readonly>
+								<input type="text" name="user_addr_extra" id="sample4_extraAddress" th:value="${user.user_addr_extra}" class="form-control" placeholder="참고항목" readonly>
 							</div>
 							<div>
-								<input id="sample4_detailAddress" class="form-control"  placeholder="상세주소">
-=======
-									<input class="form-control">
-								</div>
-								<div>
-									<button class="btn btn-secondary btn-sm" type="button">주소검색</button>
-								</div>
-							</div>
-							<div>
-								<input name="user_adress" th:value="${user.user_adress}" class="form-control">
-							</div>
-							<div>
-								<input class="form-control">
->>>>>>> 622b62f97a5300333d0d1db9ad415eccda9e0066
+								<input type="text" name="user_addr_detail" id="sample4_detailAddress" th:value="${user.user_addr_detail}" class="form-control"  placeholder="상세주소">
 							</div>
 						</div>
 					</div>
 				</div>
-<<<<<<< HEAD
 				
 				<input type="text" id="sample4_jibunAddress" placeholder="지번주소" hidden="true">
 				<span id="guide" style="color:#999;display:none" hidden="true"></span>
@@ -183,7 +161,7 @@
 				                }
 				                // 표시할 참고항목이 있을 경우, 괄호까지 추가한 최종 문자열을 만든다.
 				                if(extraRoadAddr !== ''){
-				                    extraRoadAddr = ' (' + extraRoadAddr + ')';
+				                    extraRoadAddr = '(' + extraRoadAddr + ')';
 				                }
 				
 				                // 우편번호와 주소 정보를 해당 필드에 넣는다.
@@ -217,8 +195,6 @@
 				        }).open();
 				    }
 				</script>
-=======
->>>>>>> 622b62f97a5300333d0d1db9ad415eccda9e0066
 			
 				<div class="userInfoBtns">
 					<div>
