--- a/springProject/src/main/resources/templates/order/orderPage.html
+++ b/springProject/src/main/resources/templates/order/orderPage.html
@@ -11,23 +11,32 @@
 	<header th:insert="/header"></header>
 	<main class="container mb-5" style="min-width : 1200px;">
 	<h1 class="text-center my-5">결제 페이지</h1>
-	<p th:text="${prodName}"></p>
 		<div class="d-flex justify-content-evenly" style="min-width : 1200px;">
 		
 		<div class="d-flex flex-column w-50">
 		<h2>주문 정보</h2>
 		<p class="text-left mx-3">*표는 필수표시 항목입니다.</p>
+		<table class="table table-lg align-middle text-center">
+			<tr>
+				<th>주문 상품명</th>		
+				<th>수량</th>		
+			</tr>
+			<tr>
+				<td th:text="${prodName}"></td>
+				<td> 1개 </td>
+			</tr>		
+		</table>
 		<hr>
-			<form class="row g-3 align-items-center mb-3">
+			<div class="row g-3 align-items-center mb-3">
 				  <div class="col-5">
 				    <label class="visually-hidden" for="inlineFormInputGroupUsername">주문자</label>
 				    <div class="input-group">
 				      <div class="input-group-text">주문자 *</div>
-				      <input type="text" class="form-control" id="inputtedUsername" th:value="${ordersheet.user.user_name}" readonly>
+				      <input type="text" class="form-control" id="inputtedUsername" th:value="${orderUserName}" readonly>
 				    </div>
 				  </div>
-			  </form>
-			<form class="row row-col g-3 align-items-center mb-3">
+			  </div>
+			<div class="row row-col g-3 align-items-center mb-3">
 				  <div class="col-8">
 				    <label class="visually-hidden" for="inlineFormInputGroupUserEmail">이메일</label>
 				    <div class="input-group">
@@ -46,8 +55,8 @@
 				      <option value="3">@daum.net</option>
 				    </select>
 				  </div>
-			  </form>
-				<form class="row row-cols-lg-auto g-3 align-items-center mb-3 d-flex flex-direction-row justify-content-left">
+			  </div>
+				<div class="row row-cols-lg-auto g-3 align-items-center mb-3 d-flex flex-direction-row justify-content-left">
 					<div class="input-group">
 						<span class="input-group-text" id="inputGroup-sizing-default">전화번호 *</span>
 						<button class="btn btn-outline-secondary dropdown-toggle" type="button"
@@ -65,29 +74,32 @@
 					  	class="form-control"aria-label="Server" readonly>
 						  </div>
 					</div>
-			  </form>
-			<form class="row g-3">
+			  </div>
+			<div class="row g-3">
 			  <div class="col-auto">
 			    <label for="staticEmail2" class="visually-hidden">주소 *</label>
 			    <input type="text" readonly class="form-control-plaintext" id="staticEmail2" value="주소 *">
 			  </div>
 			  <div class="col-auto">
 			    <label for="inputPassword2" class="visually-hidden">우편번호</label>
-			    <input type="text" class="form-control" id="sample6_postcode_inputted" th:value="${ordersheet.user.user_addr_postcode}" readonly>
+			    <input type="text" class="form-control" id="sample6_postcode_inputted" th:value="${userPostecode}" readonly>
 			  </div>
 			  <div class="col-auto">
 				<input class="btn btn-outline-dark"type="button" onclick="sample6_execDaumPostcode()" value="우편번호 찾기" disabled><br>
 			  </div>
-			</form>
+			</div>
 			<div class="d-flex col-4 my-1">
-			<input class="form-control col-3" type="text" id="sample6_address_inputted" th:value="${ordersheet.user.user_addr_main}"  readonly>
-			<input class="form-control col-3" type="text" id="sample6_detailAddress_inputted" placeholder="(층,동,호수 반드시 기입)" th:value="${ordersheet.user.user_addr_detail}" readonly>
-			<th:block th:if="${ordersheet.user.user_addr_extra !=null || ordersheet.user.user_addr_extra !=''}">
-			<input class="form-control col-3" type="text" id="sample6_extraAddress_inputted" placeholder="참고항목" th:value="${ordersheet.user.user_addr_extra}" readonly>
-			</th:block>
-			<th:block th:unless="${ordersheet.user.user_addr_extra !=null || ordersheet.user.user_addr_extra !=''}">
-			<input class="form-control col-3" type="text" id="sample6_extraAddress_inputted" placeholder="참고항목" value=" " readonly>
-			</th:block>
+				<input class="form-control col-3" type="text" id="sample6_address_inputted" 
+						th:value="${userAddrMain}"  readonly>
+				<input class="form-control col-3" type="text" id="sample6_detailAddress_inputted" 
+						placeholder="(층,동,호수 반드시 기입)" th:value="${userAddrDetail}" readonly>
+				<th:block th:if="${userAddrExtra !=null || userAddrExtra !=''}">
+				<input class="form-control col-3" type="text" id="sample6_extraAddress_inputted"
+						placeholder="참고항목" th:value="${userAddrExtra}" readonly>
+				</th:block>
+				<th:block th:unless="${userAddrExtra !=null || userAddrExtra !=''}">
+				<input class="form-control col-3" type="text" id="sample6_extraAddress_inputted" placeholder="참고항목" value=" " readonly>
+				</th:block>
 			</div>
 		
 		
@@ -108,22 +120,23 @@
 				  </label>
 				</div>
 			</div>
-			<form class="row g-3 align-items-center mb-3" name="nameForm">
+			<form class="row g-3 align-items-center mb-3" name="orderForm" action="/order/orderSuccess.do" method="post">
 				  <div class="col-5">
 				    <label class="visually-hidden" for="inlineFormInputGroupUsername">주문자</label>
 				    <div class="input-group">
 				      <div class="input-group-text">주문자 *</div>
+				      <input type="hidden" class="form-control" id="inputProdId" name="prodId" th:value="${orderProdId}">
+				      <input type="hidden" class="form-control" id="inputUserId" name="userId" th:value="${orderUserId}">
 				      <input type="text" class="form-control" id="inputUsername" name="name" placeholder="이름을입력하세요">
 				    </div>
 				  </div>
-			  </form>
-			<form class="row row-cols-lg g-3 align-items-center mb-3" name="emailForm">
+				<div class="row row-cols-lg g-3 align-items-center mb-3" id="emailInsert">
 				  <div class="col-8">
 				    <label class="visually-hidden" for="inlineFormInputGroupUserEmail">이메일</label>
 				    <div class="input-group">
 				      <div class="input-group-text">이메일 *</div>
-				      <input type="text" class="form-control" id="inputUserEmailId" name="emailId">
-				      <input type="text" class="form-control" id="inputUserEmailAdr" name="emailAdr" placeholder="@example.com">
+				      <input type="text" class="form-control" id="inputUserEmailId" name="email">
+				      <input type="text" class="form-control" id="inputUserEmailAdr" name="email" placeholder="@example.com">
 				    </div>
 				  </div>
 				
@@ -136,9 +149,9 @@
 				      <option value="@daum.net">@daum.net</option>
 				    </select>
 				  </div>
-			  </form>
-				<form class="row row-cols g-3 align-items-center mb-3 d-flex flex-direction-row justify-content-left"
-					 name="phoneForm">
+			  </div>
+				<div class="row row-cols g-3 align-items-center mb-3 d-flex flex-direction-row justify-content-left"
+					 id="phoneInsert">
 					<div class="input-group">
 						<span class="input-group-text" id="inputGroup-sizing-default">전화번호 *</span>
 						<label class="visually-hidden" for="phoneNo">Preference</label>
@@ -151,87 +164,89 @@
 						    </select>
 						
 						  <div class="d-flex ">
-					  <input type="text" class="form-control" id="inputPhoneMid" name="phoneNoMid">
-					  <input type="text" class="form-control" id="inputPhoneLast" name="phoneNoLast">
+					  <input type="text" class="form-control" id="inputPhoneMid" name="phone">
+					  <input type="text" class="form-control" id="inputPhoneLast" name="phone">
 						  </div>
 					</div>
-			  </form>
-			<form class="row g-3" name="addrForm">
-			  <div class="col-auto">
-			    <label for="staticEmail2" class="visually-hidden">주소 *</label>
-			    <input type="text" readonly class="form-control-plaintext" id="staticEmail2" value="주소 *">
 			  </div>
-			  <div class="col-auto">
-			    <label for="inputPassword2" class="visually-hidden">우편번호</label>
-			    <input type="text" class="form-control" name="addr_postcode" id="sample6_postcode" placeholder="우편번호(필수)"readonly>
-			  </div>
-			  <div class="col-auto">
-				<input class="btn btn-outline-dark"type="button" onclick="sample6_execDaumPostcode()" value="우편번호 찾기" ><br>
-			  </div>
-			<div class="d-flex col-4 my-1">
-			<input class="form-control col-1" type="text" name="addr_main" id="sample6_address" placeholder="상세주소" readonly>
-			<input class="form-control col-1" type="text" name="addr_detail" id="sample6_detailAddress" placeholder="(층,동,호수 반드시 기입)">
-			<input class="form-control col-1" type="text" name="addr_extra" id="sample6_extraAddress" placeholder="참고항목" readonly>
-			</div>
+					<div class="row g-3" id="addrInsert">
+						  <div class="col-auto">
+						    <label for="staticEmail2" class="visually-hidden">주소 *</label>
+						    <input type="text" readonly class="form-control-plaintext" id="staticEmail2" value="주소 *">
+						  </div>
+						  <div class="col-auto">
+						    <label for="inputPassword2" class="visually-hidden">우편번호</label>
+						    <input type="text" class="form-control" name="addr_postcode" id="sample6_postcode" placeholder="우편번호(필수)"readonly>
+						  </div>
+						  <div class="col-auto">
+							<input class="btn btn-outline-dark"type="button" onclick="sample6_execDaumPostcode()" value="우편번호 찾기" ><br>
+						  </div>
+						<div class="d-flex col-4 my-1">
+						<input class="form-control col-1" type="text" name="addr_main" id="sample6_address" placeholder="상세주소" readonly>
+						<input class="form-control col-1" type="text" name="addr_detail" id="sample6_detailAddress" placeholder="(층,동,호수 반드시 기입)">
+						<input class="form-control col-1" type="text" name="addr_extra" id="sample6_extraAddress" placeholder="참고항목" readonly>
+						</div>
+					</div>
+			</div>	
+		
+			<div class="d-flex flex-column w-25 m-50">
+			<h2>결제수단</h2>
+			<hr>
+				<fieldset>
+				<legend>결제 수단 선택</legend>
+					<div class="d-flex flex-column">
+					<div class="form-check me-4">
+					  <input class="form-check-input" type="radio" name="orderType" id="paymentRadio1">
+					  <label class="form-check-label" for="paymentRadio1">
+					    계좌이체
+					  </label>
+					</div>
+					<div class="form-check me-4">
+					  <input class="form-check-input" type="radio" name="orderType" id="paymentRadio2">
+					  <label class="form-check-label" for="paymentRadio2">
+					    가상계좌
+					  </label>
+					</div>
+					<div class="form-check me-4">
+					  <input class="form-check-input" type="radio" name="orderType" id="paymentRadio3">
+					  <label class="form-check-label" for="paymentRadio3">
+					    신용카드
+					  </label>
+					</div>
+					<div class="form-check me-4">
+					  <input class="form-check-input" type="radio" name="orderType" id="paymentRadio4" checked>
+					  <label class="form-check-label" for="paymentRadio4">
+					    무통장입금
+					  </label>
+					</div>
+					</div>
+				</fieldset>
+		
+				<h2 class="mt-5">결제정보</h2>
+				<hr>
+				<table class="table text-end">
+					  <tbody>
+					    <tr>
+					      <th scope="row">주문상품</th>
+					      <td><strong th:text="${#numbers.formatInteger(prodPrice, 3, 'COMMA')}">0</strong></td>
+					    </tr>
+					    <tr>
+					      <th scope="row">배송비</th>
+					      <td><strong>0</strong></td>
+					    </tr>
+					    <tr>
+					      <th scope="row">결제금액</th>
+					      <td colspan="2"><strong th:text="${#numbers.formatInteger(prodPrice+0, 3, 'COMMA')}">0 원</strong></td>
+					    </tr>
+					  </tbody>
+					</table>
+				<input type="hidden" name=orderTime th:value="${orderTime}">
 			</form>
-		</div>	
-		
-		<div class="d-flex flex-column w-25 m-50">
-		<h2>결제수단</h2>
-		<hr>
-			<fieldset>
-			<legend>결제 수단 선택</legend>
-				<div class="d-flex flex-column">
-				<div class="form-check me-4">
-				  <input class="form-check-input" type="radio" name="paymentRadio" id="paymentRadio1">
-				  <label class="form-check-label" for="paymentRadio1">
-				    계좌이체
-				  </label>
-				</div>
-				<div class="form-check me-4">
-				  <input class="form-check-input" type="radio" name="paymentRadio" id="paymentRadio2">
-				  <label class="form-check-label" for="paymentRadio2">
-				    가상계좌
-				  </label>
-				</div>
-				<div class="form-check me-4">
-				  <input class="form-check-input" type="radio" name="paymentRadio" id="paymentRadio3">
-				  <label class="form-check-label" for="paymentRadio3">
-				    신용카드
-				  </label>
-				</div>
-				<div class="form-check me-4">
-				  <input class="form-check-input" type="radio" name="paymentRadio" id="paymentRadio4" checked>
-				  <label class="form-check-label" for="paymentRadio4">
-				    무통장입금
-				  </label>
+					<div class="d-grid gap-2 col-10 mx-auto mt-5">
+					<a class="btn btn-lg btn-outline-primary" th:href="@{/order/orderSuccess.do}" type="submit">결제하기</a>
+					</div>
 				</div>
 				</div>
-			</fieldset>
-		
-		<h2 class="mt-5">결제정보</h2>
-		<hr>
-		<table class="table text-end">
-			  <tbody>
-			    <tr>
-			      <th scope="row">주문상품</th>
-			      <td><strong>0</strong></td>
-			    </tr>
-			    <tr>
-			      <th scope="row">배송비</th>
-			      <td><strong>0</strong></td>
-			    </tr>
-			    <tr>
-			      <th scope="row">결제금액</th>
-			      <td colspan="2"><strong>0 원</strong></td>
-			    </tr>
-			  </tbody>
-			</table>
-			<div class="d-grid gap-2 col-10 mx-auto mt-5">
-			<button class="btn btn-lg btn-outline-primary ">결제하기</button>
-			</div>
-		</div>
-		</div>
 	</main>
 	<footer th:insert="/footer"></footer>
 </body>
