--- a/springProject/src/main/resources/templates/product/productNav.html
+++ b/springProject/src/main/resources/templates/product/productNav.html
@@ -12,40 +12,21 @@
 	      <span class="navbar-toggler-icon"></span>
 	    </button>
 	    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-	      <ul class="navbar-nav d-flex justify-content-between">
+	      <ul class="navbar-nav d-flex justify-content-around" style="width: 100%;">
 	        <li class="nav-item">
-	          <a class="nav-link active" aria-current="page" href="#">추천순</a>
+	          	<a class="nav-link" aria-current="page" th:href="@{./1(search=${param.search}, sort=good, direct=desc)}">인기순</a>
 	        </li>
-	        <div class="vLine"></div>
 	        <li class="nav-item">
-	          <a class="nav-link" href="#">판매량순</a>
+	          	<a class="nav-link" th:href="@{./1(search=${param.search}, sort=prod_name, direct=asc)}">오름차순</a>
 	        </li>
-	        <div class="vLine"></div>
 	        <li class="nav-item">
-	          <a class="nav-link" href="#">할인율순</a>
+	          	<a class="nav-link" th:href="@{./1(search=${param.search}, sort=prod_name, direct=desc)}">내림차순</a>
 	        </li>
-	        <div class="vLine"></div>
 	        <li class="nav-item">
-	          <a class="nav-link" href="#">낮은가격순</a>
+	          	<a class="nav-link" th:href="@{./1(search=${param.search}, sort=prod_price, direct=asc)}">낮은가격순</a>
 	        </li>
-	        <div class="vLine"></div>
 	        <li class="nav-item">
-	          <a class="nav-link" href="#">높은가격순</a>
-	        </li>
-	        <div class="vLine"></div>
-	        <li class="nav-item">
-	          <a class="nav-link" href="#">후기많은순</a>
-	        </li>
-	        <div class="vLine"></div>
-	        <li class="nav-item dropdown">
-	          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-	            수량
-	          </a>
-	          <ul class="dropdown-menu">
-	            <li><a class="dropdown-item" href="#" data-limit="20">20개씩 보기</a></li>
-	            <li><a class="dropdown-item" href="#" data-limit="40">40개씩 보기</a></li>
-	            <li><a class="dropdown-item" href="#" data-limit="60">60개씩 보기</a></li>
-	          </ul>
+	          	<a class="nav-link" th:href="@{./1(search=${param.search}, sort=prod_price, direct=desc)}">높은가격순</a>
 	        </li>
 	      </ul>
 	    </div>
