--- a/springProject/src/main/resources/templates/header.html
+++ b/springProject/src/main/resources/templates/header.html
@@ -17,10 +17,10 @@
         </div>
         <div id="headerCenter">
         	<div class="container-fluid" id="searchBox">
-			  <form class="d-flex" role="search" action="#" id="searchForm" name="searchForm" method="get">
-			    <input class="form-control me-2" name="searchInput" id="searchInput" type="search" aria-label="Search" minlength="2" maxlength="50">
+			  <form class="d-flex" role="search" th:action="@{/product/productList/1}" id="searchForm" name="searchForm">
+			    <input class="form-control me-2" name="search" id="searchInput" type="search" aria-label="Search" maxlength="50">
 			    <button class="btn" type="submit">
-			    	<img alt="" src="/public/img/pngegg.png">
+			    	<img src="/public/img/pngegg.png">
 			    </button>
 			  </form>
 			</div>
@@ -28,17 +28,25 @@
         <div id="headerRight">
 	        <nav style="--bs-breadcrumb-divider: '|';" aria-label="breadcrumb">
 			  <ol class="breadcrumb">
-			  	<th:block th:if="${session.loginUser==null}">
-			    	<li class="breadcrumb-item"><a href="/user/login.do">로그인</a></li>
-			    	<li class="breadcrumb-item"><a href="/user/signup">회원가입</a></li>
+			  	<th:block th:if="${session.loginUser == null}">
+			    	<li class="breadcrumb-item">
+			    		<a href="/user/login.do">로그인</a>
+			    	</li>
+			    	<li class="breadcrumb-item">
+			    		<a href="/user/signup">회원가입</a>
+			    	</li>
 			    </th:block>
-			    <th:block th:unless="${session.loginUser==null}">
-     				<a th:href="@{/user/detail/{user_id}(user_id=${session.loginUser.user_id})}" class="btn btn-sm btn-outline-secondary">					
-     				<span th:text="${session.loginUser.user_name}"></span>
-					(<span th:text="${session.loginUser.user_id}"></span>)
-					</a> / 
-					<a href="/user/logout.do" class="btn btn-sm btn-danger">로그아웃</a>
-     			</th:block>
+			    <th:block th:unless="${session.loginUser == null}">
+			    	<li class="breadcrumb-item">
+			    		<a th:href="@{/user/detail/{user_id}(user_id=${session.loginUser.user_id})}">					
+	     					<span th:text="${session.loginUser.user_name}"></span>
+							(<span th:text="${session.loginUser.user_id}"></span>)
+						</a> 
+					</li>
+			    	<li class="breadcrumb-item">
+			    		<a href="/user/logout.do">로그아웃</a>
+			    	</li>		
+			    </th:block>
 			    <li class="breadcrumb-item"><a href="#">장바구니</a></li>
 			  </ol>
 			</nav>  
@@ -84,5 +92,13 @@
     <div class="collapse" id="navbarToggleExternalContent">
 	  <div class="p-4" style="background-color: dodgerblue;"></div>
 	</div>
+	<script>
+		const searchForm = document.forms.searchForm;
+		searchForm.addEventListener("submit", (event) => {
+			if(!searchForm.search.value || !searchForm.search.value.trim()) {
+				event.preventDefault();		
+			}
+		});
+	</script>
 </body>
 </html>
