--- a/springProject/src/main/resources/templates/question/faqList.html
+++ b/springProject/src/main/resources/templates/question/faqList.html
@@ -104,14 +104,14 @@
     </th:block>
     <nav class="navbar mt-5 mb-4" style="min-width: 1200px;">
 	  <div class="container-fluid">
-	    <form th:action="@{./0}" class="d-flex" role="search">
+	    <form th:action="@{./0}" class="d-flex" role="search" name="faqSearchForm">
 	      <select class="form-select me-2" name="field" id="searchKey" style="width: 100px; border: 1px solid #6c757d">
                <option th:selected="${#strings.equals(param.field, 'faqboard_no')}" value="faqboard_no">글 번호</option>
 	      	   <option th:selected="${#strings.equals(param.field, 'faqboard_title')}" value="faqboard_title">제목</option>
 	      </select>
 	      <input class="form-control me-2" name="search" id="search" size="20" type="search" placeholder="검색" aria-label="Search" style="border: 1px solid #6c757d">
 	      <button class="btn btn-outline-secondary">
-			<img alt="" src="/public/img/pngegg.png" style="width: 28px; height: 28px;">
+			<img src="/public/img/pngegg.png" style="width: 28px; height: 28px;">
 		  </button>
 	      <input type="hidden" name="sort" th:value="${param.sort}">
 	      <input type="hidden" name="direct" th:value="${param.direct}">
@@ -120,5 +120,13 @@
 	</nav>
     </main>
     <footer th:insert="/footer"></footer>
+    <script>
+		const faqSearchForm = document.forms.faqSearchForm;
+		faqSearchForm.addEventListener("submit", (event) => {
+			if(!faqSearchForm.search.value || !faqSearchForm.search.value.trim()) {
+				event.preventDefault();		
+			}
+		});
+	</script>
 </body>
 </html>
