--- a/springProject/src/main/resources/templates/question/faqList.html
+++ b/springProject/src/main/resources/templates/question/faqList.html
@@ -12,28 +12,28 @@
 	  <ol class="breadcrumb">
 	    <li class="breadcrumb-item"><a href="/">홈</a></li>
 	    <li class="breadcrumb-item"><a href="#">고객 센터</a></li>
-	    <li class="breadcrumb-item" aria-current="page"><a href="/question/faqList/1/0" class="breadcrumb-item active">자주 하는 질문(FAQ)</a></li>
+	    <li class="breadcrumb-item" aria-current="page"><a href="/question/faqList/0/1" class="breadcrumb-item active">자주 하는 질문(FAQ)</a></li>
 	  </ol>
 	</nav>
     <h2>자주 하는 질문(FAQ)</h2>
 	<ul class="nav nav-tabs nav-fill" id="category">
 	  <li class="nav-item">
-	    <a class="nav-link" th:classappend="${(faq_division_no == 0) ? 'active' : ''}" aria-current="page" th:href="@{/question/faqList/1/{faq_division_no}(faq_division_no = 0)}">전체</a>
+	    <a class="nav-link" th:classappend="${(faq_division_no == 0) ? 'active' : ''}" aria-current="page" th:href="@{/question/faqList/{faq_division_no}/1(faq_division_no = 0)}">전체</a>
 	  </li>
 	  <li class="nav-item">
-	    <a class="nav-link" th:classappend="${(faq_division_no == 1) ? 'active' : ''}" th:href="@{/question/faqList/1/{faq_division_no}(faq_division_no = 1)}">상품</a>
+	    <a class="nav-link" th:classappend="${(faq_division_no == 1) ? 'active' : ''}" th:href="@{/question/faqList/{faq_division_no}/1(faq_division_no = 1)}">상품</a>
 	  </li>
 	  <li class="nav-item">
-	    <a class="nav-link" th:classappend="${(faq_division_no == 2) ? 'active' : ''}" th:href="@{/question/faqList/1/{faq_division_no}(faq_division_no = 2)}">주문/결제</a>
+	    <a class="nav-link" th:classappend="${(faq_division_no == 2) ? 'active' : ''}" th:href="@{/question/faqList/{faq_division_no}/1(faq_division_no = 2)}">주문/결제</a>
 	  </li>
 	  <li class="nav-item">
-	    <a class="nav-link" th:classappend="${(faq_division_no == 3) ? 'active' : ''}" th:href="@{/question/faqList/1/{faq_division_no}(faq_division_no = 3)}">배송</a>
+	    <a class="nav-link" th:classappend="${(faq_division_no == 3) ? 'active' : ''}" th:href="@{/question/faqList/{faq_division_no}/1(faq_division_no = 3)}">배송</a>
 	  </li>
  	  <li class="nav-item">
-	    <a class="nav-link" th:classappend="${(faq_division_no == 4) ? 'active' : ''}" th:href="@{/question/faqList/1/{faq_division_no}(faq_division_no = 4)}">취소/환불/교환</a>
+	    <a class="nav-link" th:classappend="${(faq_division_no == 4) ? 'active' : ''}" th:href="@{/question/faqList/{faq_division_no}/1(faq_division_no = 4)}">취소/환불/교환</a>
 	  </li>
 	  <li class="nav-item">
-	    <a class="nav-link" th:classappend="${(faq_division_no == 5) ? 'active' : ''}" th:href="@{/question/faqList/1/{faq_division_no}(faq_division_no = 5)}">회원</a>
+	    <a class="nav-link" th:classappend="${(faq_division_no == 5) ? 'active' : ''}" th:href="@{/question/faqList/{faq_division_no}/1(faq_division_no = 5)}">회원</a>
 	  </li>
 	</ul>
     <div id="table">
@@ -104,7 +104,7 @@
     </th:block>
     <nav class="navbar mt-5 mb-4" style="min-width: 1200px;">
 	  <div class="container-fluid">
-	    <form th:action="@{./0}" class="d-flex" role="search" name="faqSearchForm">
+	    <form th:action="@{./1}" class="d-flex" role="search" name="faqSearchForm">
 	      <select class="form-select me-2" name="field" id="searchKey" style="width: 100px; border: 1px solid #6c757d">
                <option th:selected="${#strings.equals(param.field, 'faqboard_no')}" value="faqboard_no">글 번호</option>
 	      	   <option th:selected="${#strings.equals(param.field, 'faqboard_title')}" value="faqboard_title">제목</option>
