--- a/springProject/src/main/resources/templates/header.html
+++ b/springProject/src/main/resources/templates/header.html
@@ -46,6 +46,9 @@
 			    	<li class="breadcrumb-item">
 			    		<a href="/user/logout.do">로그아웃</a>
 			    	</li>
+			    	<li class="breadcrumb-item">
+			    		<a href="#">마이페이지</a>
+			    	</li>
 			    </th:block>
 			    <li class="breadcrumb-item"><a href="#">장바구니</a></li>
 			  </ol>
