--- a/springProject/src/main/resources/templates/review/reviewList.html
+++ b/springProject/src/main/resources/templates/review/reviewList.html
@@ -1,53 +1,50 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org/%22%3E
 <head>
 <meta charset="UTF-8">
-<title>작성한 리뷰(목록)</title>
-</head>
+<title>리뷰 리스트</title>
 <style>
-#pageBody{
-margin: 50px 300px;
-}
-#statusText{
-display:flex; justify-content: flex-end;
-}
-#reviewList{
-border: 1px solid lightgrey;
-}
-#buttons{
-display: flex; justify-content: flex-end; margin-right: 50px;
-}
-#buttons>button{
-margin-right: 20px;
+#title_reviewList{
+    text-align: center;
 }
 </style>
+</head>
 <body>
-	<header th:insert="/header"></header>
-	<main class="container my-5 "style="min-width : 1200px;">
-		<h1 class="text-center mt-5">작성한 리뷰 관리(목록)</h1>
-		<p class="text-end" style="margin-right:300px">
-			<span> <strong th:text="${userId}"></strong>님, 총 <strong></strong>개의 리뷰를 등록하셨습니다.</span>
-		</p>
-		<ol class="list-group w-50" style="margin-left:300px">
-			<li class="list-group-item d-flex flex-column justify-content-evenly align-items-start" th:each="review : ${reviews}">
-			    <div class="ms-2 me-auto">
-			      <p class="fw-bold" th:text="${review.review_title}"></p>
-					<span>별점 :
-						<span  class="badge bg-primary rounded-pill" >
-						<strong th:text="${review.review_score}"></strong>
-						<strong> / 5</strong>
-						</span> 
-					</span>
-					<span th:text="${#dates.format(review.review_time, 'yyyy-MM-dd')}"></span>
-					<p class="mt-3" th:text="${review.review_content}"></p>
-				</div>
-				<div class="ms-auto align-items-end">
-					<button class="btn btn-sm btn-outline-primary me-2">수정</button>
-					<button class="btn btn-sm btn-outline-danger">삭제</button>
-				</div>
-			</li>
-		</ol>
-	</main>
-	<footer th:insert="/footer"></footer>
+    <!--페이지 상단-->
+  <header th:insert="/header"></header>
+
+    <main>
+        <!--게시글 리스트 페이지-->
+        <h1 id="title_reviewList" class="m-3 d-flex justify-content-between align-items-center">리뷰 리스트
+            <a href="/board/insert.do" class="btn btn-sm btn-primary">리뷰 등록</a>
+        </h1>
+        <hr>
+
+        <table class="table table-hover">
+            <thead>
+                <tr>
+                    <th>no</th>
+          <th>제품</th>
+                    <th>글쓴이</th>
+                    <th>타이틀</th>
+                    <th>등록일</th>
+                </tr>
+            </thead>
+            <tbody>
+                <th:block th:each="board : ${review}" >
+                    <tr th:onclick="location.href='/board/detail/[[${review.review_no}]]'">
+                        <td th:text="${review.review_no}"></td>
+            <td th:text="${review.prod_no}"></td>
+                        <td th:text="${review.user?.user_id}"></td>
+                        <td th:text="${review.review_title}"></td>
+                        <td th:text="${#dates.format(review.review_time,'yyyy-MM-dd hh:mm:ss')}"></td>
+                    </tr>
+                </th:block>
+            </tbody>
+        </table>
+    </main>
+
+  <!--페이지 하단-->
+  <footer th:insert="/footer"></footer>
 </body>
 </html>
