userReview controller, mapper, userReveiwList/userReviewUpdate.html 수정(리뷰 수정, 삭제 구현)

--- a/springProject/src/main/resources/templates/review/userReviewUpdate.html
+++ b/springProject/src/main/resources/templates/review/userReviewUpdate.html
@@ -39,7 +39,30 @@ margin-right: 20px;
 			</div>
 			<div class="mx-auto mt-5">
 				<button class="btn btn-sm btn-outline-primary me-2" type="submit">수정</button>
-				<button class="btn btn-sm btn-outline-danger">삭제</button>
+				<!-- <a  class="btn btn-outline-danger btn-sm" data-toggle="modal" data-target="#exampleModal" id="deleteBtn">삭제</a> -->
+			<!-- Button trigger modal -->
+			<button type="button" class="btn btn-outline-danger btn-sm" data-bs-toggle="modal" data-bs-target="#exampleModal">
+			  삭제
+			</button>
+			</div>
+			
+			<!-- Modal -->
+			<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+			  <div class="modal-dialog">
+			    <div class="modal-content">
+			      <div class="modal-header">
+			        <h5 class="modal-title" id="exampleModalLabel">리뷰 삭제</h5>
+			        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+			      </div>
+			      <div class="modal-body">
+			        <p>정말로 "<span th:text="${review.review_title}"></span>" 를 삭제하시겠습니까? </p>
+			      </div>
+			      <div class="modal-footer">
+			        <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">취소</button>
+			        <a type="button" class="btn btn-outline-danger" th:href="@{/review/delete/{reviewNo}(reviewNo=${reviewNo})}">삭제하기!</a>
+			      </div>
+			    </div>
+			  </div>
 			</div>
 		</form>
 	</main>
