--- a/springProject/src/main/resources/templates/product/productDetail.html
+++ b/springProject/src/main/resources/templates/product/productDetail.html
@@ -8,7 +8,6 @@
 <body>
 	<header th:insert="/header"></header>
 	<main class="container" style="min-width : 1200px;">
-	<div class="container" style="min-width : 1200px;">
 		<h1 class="text-center mt-5 p-3" th:text="${product.prod_name}"></h1>
 		<br>
 			<div class="d-flex justify-content-evenly">
@@ -24,7 +23,7 @@
 				<hr>
 				<p>배송비</p>
 				<hr>
-					<div style="min-width : 1200px;">
+					<div >
 					<p>총 합계 금액 <strong th:text="${#numbers.formatInteger(product.prod_price, 3, 'COMMA')+'원'}"></strong></p>
 						<div class="" role="group" aria-label="Default button group">
 						  <button type="button" class="btn btn-outline-dark" style="border-radius: 0;">좋아요</button>
@@ -214,7 +213,6 @@
 				</tr>
 			</table>
 			</div>
-	</div>
 	</main>
 	<footer th:insert="/footer"></footer>
 
