화면출력용으로 user/review controller 수정, header/mypage html수정

--- a/springProject/src/main/resources/templates/user/mypage.html
+++ b/springProject/src/main/resources/templates/user/mypage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org/%22%3E
+<html xmlns:th="http://www.thymeleaf.org/">
 <head>
 <meta charset="UTF-8">
 <title>마이페이지</title>
