--- a/springProject/src/main/resources/templates/header.html
+++ b/springProject/src/main/resources/templates/header.html
@@ -47,7 +47,7 @@
 			    		<a href="/user/logout.do">로그아웃</a>
 			    	</li>
 			    	<li class="breadcrumb-item">
-			    		<a href="#">마이페이지</a>
+			    		<a th:href="@{/user/mypage.do}">마이페이지</a>
 			    	</li>
 			    </th:block>
 			    <li class="breadcrumb-item"><a href="#">장바구니</a></li>
