--- a/springProject/src/main/resources/templates/review/reviewInsert.html
+++ b/springProject/src/main/resources/templates/review/reviewInsert.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org/%22%3E
+<html xmlns:th="http://www.thymeleaf.org/">
 <head>
 <meta charset="UTF-8">
 <title>리뷰 등록 페이지</title>
